--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,36 @@
 include:
   - project: solutions-platform2/gitlab-ci-templates
-    ref: master
+    ref: add-e2e-step
     file: /templates/solutions-auto-devops.yml
+
+e2e test:
+  image: cypress/browsers:node14.16.0-chrome89-ff86
+  stage: test_e2e
+  variables: 
+
+  script:
+    - yarn install --frozen-lockfile
+    # check Cypress binary path and cached versions
+    # useful to make sure we are not carrying around old versions
+    - npx cypress cache path
+    - npx cypress cache list
+    - npx cypress verify
+    - npx cypress info
+    - export CYPRESS_BASE_URL=$(cat environment_url.txt)
+    - npx cypress run --browser chrome
+  dependencies:
+    - review
+  artifacts:
+    when: always
+    paths:
+      - cypress/videos/**/*.mp4
+      - cypress/screenshots/**/*.png
+    expire_in: 1 day
+  rules:
+    - if: '$CI_KUBERNETES_ACTIVE == null || $CI_KUBERNETES_ACTIVE == ""'
+      when: never
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      when: never
+    - if: '$REVIEW_DISABLED'
+      when: never
+    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH'
