--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry = https://artifactory.int.datarobot.com/artifactory/api/npm/npm-all
+registry = https://artifactory.devinfra.drdev.io/artifactory/api/npm/npm-all
 bin-links = true
 save-exact = true
 engine-strict = true
