--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@datarobot/design-system": "3.2.0",
     "@fortawesome/fontawesome-pro": "5.15.1",
+    "@reduxjs/toolkit": "1.6.0",
     "@types/react": "17.0.9",
     "@types/react-dom": "17.0.6",
     "@types/react-router-dom": "5.1.7",
@@ -14,6 +15,7 @@
     "eslint-plugin-prettier": "3.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "ttag": "1.7.24",
