--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "1.6.0",
     "@types/react": "17.0.9",
     "@types/react-dom": "17.0.6",
+    "@types/react-responsive": "8.0.2",
     "@types/react-router-dom": "5.1.7",
     "axios": "0.21.1",
     "eslint-config-airbnb-typescript": "12.3.1",
@@ -16,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
+    "react-responsive": "8.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "ttag": "1.7.24",
