--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react-responsive": "8.0.2",
     "@types/react-router-dom": "5.1.7",
     "axios": "0.21.1",
+    "classnames": "2.3.1",
     "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
+    "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
