--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-template",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@datarobot/design-system": "3.2.0",
     "@fortawesome/fontawesome-pro": "5.15.1",
