--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,5 +23,7 @@
     "jsx": "react-jsx",
     "baseUrl": "./src"
   },
-  "include": [ "**/*.*"]
+  "include": [
+    "**/*.*"
+  ]
 }
