--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
+    "history": "5.0.0",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -36,7 +37,9 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix  .",
     "cypress": "CYPRESS_coverage=false npx cypress open",
-    "cypress:coverage": "npx cypress open"
+    "cypress:coverage": "npx cypress open",
+    "translations:update": "npx ttag-cli update src/i18n/uk.po src/ --discover=t && npx ttag-cli update src/i18n/ru.po src/ --discover=t",
+    "translations:po2json": "npx ttag-cli po2json src/i18n/ru.po > src/i18n/ru.po.json && npx ttag-cli po2json src/i18n/uk.po > src/i18n/uk.po.json"
   },
   "eslintConfig": {
     "extends": "react-app"
