--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
       }
     }
   },
+  "ignorePatterns": ["**/*.js", "**/*.jsx"],
   "rules": {
     "semi": "off",
     "@typescript-eslint/semi": ["error"],
