--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "history": "5.0.0",
+    "miew": "0.9.0",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
